# mynah

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  compile_flags.txt  libmynah.dylib
cli/: main.c
docs/: api.md  architecture-notes.md  backends.md  benchmarks.md  canary-arch.md  canary-usage.md  gguf.md  models.md  nemotron-arch.md  nemotron-languages.md  parakeet-en-family.md  parakeet-tdt-arch.md  prior-art.md  quantization.md  server.md  streaming.md
examples/: minimal.c
samples/: README.md  manifest.json
scripts/: download_model.sh  make_long_fixtures.sh
server/: http_util.c  http_util.h  main.c
src/: audio.c  audio.h  backend.c  backend.h  cuda_gemm.cu  decoder.c  decoder.h  decoder_aed.c  decoder_aed.h  decoder_ctc.c  decoder_ctc.h  encoder.c  encoder.h  engine.h  features.c  features.h  gguf.c  gguf.h  metal_mps.m  mynah.c  mynah.h  qmat.c  qmat.h  stwrite.c  stwrite.h  subsampling.c  subsampling.h  threads.c  threads.h  tokenizer.c  tokenizer.h  weights.c  weights.h
tests/: bench.sh  bench_throughput.c  npy.c  test_batch  test_batch.c  test_e2e.sh  test_encoder  test_encoder.c  test_features  test_features.c  test_gguf.c  test_gguf.sh  test_qmat  test_qmat.c  test_serve_repro.sh  test_server.sh  test_streaming  test_streaming.c  test_subsampling  test_subsampling.c  testcfg.c
tools/: convert_nemo.py  export_gguf.py  fetch_fleurs_samples.py  fetch_lang_samples.py  import_gguf.py  pyproject.toml
tools/eval/: compare.py  test_langs.py  test_samples.py  ws_client.py
tools/oracle/: features.py  model.py  transcribe.py
(+27 files in other folders)
