[project]
name = "mynah-tools"
version = "0.0.1"
description = "Tooling offline per Mynah: conversione pesi, oracolo di riferimento, eval"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "safetensors>=0.4",
    "soundfile>=0.12",
    "sentencepiece>=0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# l'oracolo torch e la generazione dei golden richiedono extra pesanti:
#   uv sync --extra oracle
oracle = [
    "torch>=2.4",
]

[tool.uv]
package = false
